# ParallelSpGEMM

./: .gitignore  CMakeLists.txt  README.md
include/: spgemm_parallel_1.h  spgemm_parallel_2_hashmap.h  spgemm_parallel_3_memset.h  spgemm_parallel_4_raw_pointer.h  spgemm_parallel_5_matrix.h  spgemm_parallel_6_matrix_better_reset.h  spgemm_parallel_7_raw_pointer_outside_forloop.h  spgemm_parallel_8_GraphBLAS_Gustavson.h  spgemm_serial_hashmap.h  spgemm_serial_no_prealloc.h  spgemm_serial_prealloc.h  test.h
py/: benchmark_helper.py  do_spgemm.parallel.py  do_spgemm.parallel_2_hashmap.py  do_spgemm.parallel_3_memset.py  do_spgemm.parallel_4_raw_pointer.py  do_spgemm.parallel_5_matrix.py  do_spgemm.parallel_6_matrix_better_reset.py  do_spgemm.parallel_7_raw_pointer_outside_forloop.py  do_spgemm.parallel_8_GraphBLAS_Gustavson.py  do_spgemm.serial.py  do_spgemm.serial_2_hashmap.py  main.py  py1.parallel1.py  py2.parallel_2_hashmap.py  py3.serial_2_hashmap.py  py4.parallel_x.py
scripts/: sh0.scircuit.sh
src/: spgemm.cpp  spgemm.module.cpp  spgemm_parallel_1.cpp  spgemm_parallel_2_hashmap.cpp  spgemm_parallel_3_memset.cpp  spgemm_parallel_4_raw_pointer.cpp  spgemm_parallel_5_matrix.cpp  spgemm_parallel_6_matrix_better_reset.cpp  spgemm_parallel_7_raw_pointer_outside_forloop.cpp  spgemm_parallel_8_GraphBLAS_Gustavson.cpp  spgemm_serial_hashmap.cpp  spgemm_serial_no_prealloc.cpp  spgemm_serial_prealloc.cpp  test.cpp
